src/test/ui/feature-gates/feature-gate-const_transmute.stderr
error: `std::intrinsics::transmute` is not yet stable as a const fn
  --> $DIR/feature-gate-const_transmute.rs:6:38
   |
LL | const TRANSMUTED_U32: u32 = unsafe { mem::transmute(Foo(3)) };
   |                                      ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(const_transmute)]` to the crate attributes to enable

error: aborting due to previous error

